compiler-core/src/javascript/tests/snapshots/gleam_core__javascript__tests__module_lets__a_closure_that_reads_one_written_below.snap
---
source: compiler-core/src/javascript/tests/module_lets.rs
expression: "\npub let f = fn() { y }\n\npub let y = 1\n"
---
----- SOURCE CODE

pub let f = fn() { y }

pub let y = 1


----- ERROR
error: Value used before it is defined
  ┌─ /src/one/two.gleam:2:1
  │
2 │ pub let f = fn() { y }
  │ ^^^^^^^^^ This reads `y`
3 │ 
4 │ pub let y = 1
  │ --------- Defined here

`y` is bound below this one, and a binding at module level
runs when the module is loaded, in the order it was written. So
`y` has no value yet when this one runs.
