compiler-core/src/javascript/tests/snapshots/gleam_core__javascript__tests__module_lets__a_function_reads_it.snap
---
source: compiler-core/src/javascript/tests/module_lets.rs
expression: "\npub let x = 1\n\npub fn read() {\n  x + 1\n}\n"
---
----- SOURCE CODE

pub let x = 1

pub fn read() {
  x + 1
}


----- COMPILED JAVASCRIPT
export const x = 1;

export function read() {
  return x + 1;
}
