compiler-core/src/javascript/tests/snapshots/gleam_core__javascript__tests__module_lets__an_annotation.snap
---
source: compiler-core/src/javascript/tests/module_lets.rs
expression: "\npub let x: Int = 1\n"
---
----- SOURCE CODE

pub let x: Int = 1


----- COMPILED JAVASCRIPT
export const x = 1;
