compiler-core/src/javascript/tests/snapshots/gleam_core__javascript__tests__module_lets__private_one_that_nothing_reads_is_still_emitted.snap
---
source: compiler-core/src/javascript/tests/module_lets.rs
expression: "\nlet x = 1\n"
---
----- SOURCE CODE

let x = 1


----- COMPILED JAVASCRIPT
const x = 1;
